@@ -357,6 +357,10 @@ log_batch=Executed batch file $1
 log_batch_l=Executed batch file $1 ($2 created, $3 modified, $4 deleted)
 log_ubatch=Executed uploaded batch file
 log_ubatch_l=Executed uploaded batch file ($1 created, $2 modified, $3 deleted)
+log_gbatch=Executed group batch file $1
+log_gbatch_l=Executed group batch file $1 ($2 created, $3 modified, $4 deleted)
+log_ugbatch=Executed uploaded group batch file
+log_ugbatch_l=Executed uploaded group batch file ($1 created, $2 modified, $3 deleted)
 
 batch_title=Execute Batch File
 batch_ecannot=You cannot use the batch file form
@@ -495,3 +499,23 @@ emass_pass=Unlocking password ..
 emass_doing=Enabling user $1 ..
 emass_already=.. already enabled!
 
+gbatch_title=Execute Group Batch File
+gbatch_ecannot=You cannot use the group batch file form
+batch_desc=This form allows you to create, modify or delete many groups at once from an uploaded or local text file. Each line in the file specifies one action to take, depending on its first field. The line formats are :
+gbatch_desc=<b>create</b>:groupname:passwd:gid:member,member,...<p><b>modify</b>:oldgroupname:groupname:passwd:gid:member,member,...<p><b>delete</b>:groupname
+gbatch_descafter=In <b>create</b> lines, if the <tt>gid</tt> field is left empty, Webmin will assign a GID automatically.
+gbatch_descafter2=In <b>modify</b> lines, an empty field will be taken to mean that the corresponding group attribute is not to be modified.
+gbatch_header=Batch group creation, update and deletion options
+gbatch_others=Create, modify or delete groups in other modules?
+gbatch_batch=Only update groups file when batch is complete?
+gbatch_chgid=Change GID on files of modified groups?
+gbatch_ecaccess=You are not allowed to create the group at line $1 : $2
+gbatch_emaccess=You are not allowed to modify the group at line $1 : $2
+gbatch_edaccess=You are not allowed to delete the group at line $1 : $2
+gbatch_created=Created group $1
+gbatch_deleted=Deleted group $1
+gbatch_modified=Modified group $1
+gbatch_enogroup=Group does not exist at line $1 : $2
+gbatch_eprimary=Group at line $1 cannot be deleted, as it is the primary group of user $2.
+gbatch_egroup=Duplicate group name at line $1 : $2
+gbatch_egroupname=Invalid group name at line $1
